@@ -337,13 +337,14 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA i560   (EXPERIMENTAL)
        Canon PIXMA i850   (EXPERIMENTAL) *1
        Canon PIXMA i860   (EXPERIMENTAL) *1
+       Canon PIXMA i865   (EXPERIMENTAL) *1
        Canon   BJC S300   (EXPERIMENTAL)
        Canon   BJC S500   (EXPERIMENTAL)
        Canon   BJC S600   (EXPERIMENTAL)
        Canon   BJC S800   (EXPERIMENTAL)
 
-       *1: for compatibility, the changed printers are named with
-        "new" appended. The old printers will be deprecated in a
+       *1: for compatibility, the original printers are named with
+        "old" appended. These old printers will be deprecated in a
         future release.
 
 * Changes from 5.2.6
